--- a/src/components/article-preview.module.css
+++ b/src/components/article-preview.module.css
@@ -1,14 +1,53 @@
+.preview {
+  width: 100%;
+  height: 120px;
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 20px;
+}
+
+.previewImg {
+  width: 180px;
+  height: 100px;
+  object-fit: cover;
+}
+
 .previewTitle {
-  font-size: 1.5em;
+  font-size: 24px;
+  margin: 0;
+  padding: 0;
+  line-height: 1;
+  font-size: 32px;
+  font-weight: bold;
+  color: #1d6ff2;
 }
 
 .tag {
-  color: #A0A0A0;
+  color: #a0a0a0;
   text-decoration: none;
   display: inline-block;
-  padding: .33333rem .5rem;
+  padding: 0.33333rem 0.5rem;
   line-height: 1;
   border-radius: 2px;
-  border: 1px solid #A0A0A0;
-  margin-right: .5em;
+  border: 1px solid #a0a0a0;
+  margin-right: 0.5em;
+}
+
+.previewContents {
+  width: 100%;
+}
+
+.publishDate {
+  font-style: oblique;
+  color: #8b95a1;
+  font-size: 14px;
+  font-weight: bold;
+}
+
+p {
+  margin: 0;
+  padding: 0;
+  margin-top: 15px;
+  text-decoration: none;
+  line-height: 1.25;
 }
