--- a/src/components/base.css
+++ b/src/components/base.css
@@ -1,38 +1,4 @@
-@font-face {
-  font-family: "Avenir";
-  font-weight: 400;
-  font-style: normal;
-  src: url("/avenir-400.woff2") format("woff2");
-  font-display: swap;
-}
-
-body {
-  font-family: "Avenir", Tahoma, Arial, Helvetica, sans-serif;
-  font-size: 1em;
-  line-height: 1.65;
-  color: #373F49;
-  background: #eee;
-  margin: 0;
-}
-
-img {
-  display: block;
-  width: 100%;
-}
-
-h1,
-h2,
-h3 {
-  font-size: 2em;
-  font-weight: normal;
-}
-
-a {
-  color: currentColor;
-}
-
 .wrapper {
-  width: calc(100% - 10vmin);
   margin: 0 auto;
   padding: 5vmin 0;
 }
@@ -44,9 +10,6 @@ a {
   margin: 0;
   padding: 0;
   list-style: none;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-  grid-gap: 5vmin;
 }
 
 /**
@@ -67,6 +30,11 @@ a {
   list-style: none;
 }
 
-  .list-inline li {
-    display: inline-block;
-  }
+.list-inline li {
+  display: inline-block;
+}
+
+a {
+  color: #373f49;
+  text-decoration: none;
+}
